tests/ui/missing/missing-main.rs
//@error-in-other-file: `main` function not found
fn mian() { }
